# op-geth

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  genesis.json  start.sh
.github/workflows/: img.yaml
core/vm/: contracts.go  evm.go
