[workspace]
resolver = "2"

members = ["precompiles"]

[patch.crates-io]
ark-ff = { git = "https://github.com/arkworks-rs/algebra" }
ark-ec = { git = "https://github.com/arkworks-rs/algebra" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra" }
ark-bn254 = { git = "https://github.com/arkworks-rs/algebra" }
ark-ed-on-bn254 = { git = "https://github.com/arkworks-rs/algebra" }
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16"  }
ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std" }
ark-relations = { git = "https://github.com/arkworks-rs/snark" }